[package]
name = "diana-exe"
version = "0.1.0"
edition = "2021"
description = "An emulator for the Diana CPU"

readme = "../README.md"

authors = ["Owen Friedman <5-pebble@protonmail.com>"]
repository = "https://github.com/5-pebbles/diana-ii"
homepage = "https://github.com/5-pebbles/diana-ii"

license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-int = "1.2.7"
bitbybit = "1.3.2"
clap = { version = "4.5.4", features = ["derive"] }
